# ambientBadge

./: LOGCAT_ANALYSIS_README.md  NOTICE.md  README.md  TEST_STATUS_REPORT.md  analyze_logcat.sh  build.gradle.kts  create-prd.mdc  generate-tasks.mdc  gradle.properties  local.properties  logcat_analysis_20250925_180353.json  logcat_analyzer.py  run_tests.sh  settings.gradle.kts
.github/workflows/: cve-scan.yml  phi-linter.yml  privacy-compliance.yml  pt5-security-tests.yml  pt6-pt7-tests.yml  sbom-generation.yml
app/: build.gradle.kts  local.properties
app/src/androidTest/kotlin/com/frozo/ambientscribe/integration/: StrictModePolicyTest.kt
app/src/androidTest/kotlin/com/frozo/ambientscribe/pdf/: PDFIntegrationTest.kt  PrinterMatrixTest.kt
app/src/androidTest/kotlin/com/frozo/ambientscribe/ui/: AccessibilityTest.kt  EditPersistenceTest.kt  ReviewActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/whisper-tiny-int8/: tokenizer.json  whisper-tiny-encoder-int8.ct2
app/src/main/assets/schemas/: telemetry_events.schema.json
app/src/main/cpp/: CMakeLists.txt  llama_android.cpp  whisper_android.cpp
app/src/main/kotlin/com/frozo/ambientscribe/: AmbientScribeApplication.kt  MainActivity.kt
app/src/main/kotlin/com/frozo/ambientscribe/accessibility/: AccessibilityManager.kt
app/src/main/res/layout/: activity_main.xml  item_prescription_medication.xml
app/src/main/res/values/: colors.xml  md_theme_colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
docs/: API_REFERENCE.md  DEPLOYMENT_READINESS.md  DEVICE_LOSS_RECOVERY_DECISION.md  DOCUMENTATION_VALIDATION_REPORT.md  HANDOVER_CHECKLIST.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  OEM_BATTERY_OPTIMIZATION_PLAYBOOKS.md  PRIVACY_REVIEW_LINDDUN.md  PROJECT_SUMMARY.md  PT5_SECURITY_IMPLEMENTATION_SUMMARY.md  TESTING_DOCUMENTATION.md  THREAT_MODEL_STRIDE.md  TROUBLESHOOTING_GUIDE.md
docs/adr/: ADR-001-on-device-ai-stack.md  ADR-002-audio-ingest-pipeline.md  ADR-003-security-architecture.md  ADR-004-document-export.md
scripts/: cve-checker.py  generate_dependency_attestations.py  generate_pt6_pt7_test_report.py  generate_security_test_report.py  phi_linter.py  privacy_policy_checker.py  sbom_summary.py  validate_sbom.py
tasks/: prd-ambient-scribe-badge-phone-mic-mvp-v1.0.0.md  tasks-ambient-scribe-badge-phone-mic-mvp-v1.0.0.md
(+185 files in other folders)
